--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -2,5 +2,5 @@
   <p>{{message}}</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="modal.close('Ok click')">Ok</button>
+  <button type="button" class="btn" (click)="modal.close('Ok click')">Ok</button>
 </div>
