- chat - host - game-board

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -4,11 +4,11 @@
   <div class="main-menu">
     <h2>Game is ready to join!</h2>
     <div class="actions">
-      <button class="join" type="button" (click)="redirectGame()">Join game</button>
+      <button class="join" type="button" (click)="redirectGameBoard()">Join game</button>
       <button class="leaderboard" type="button" (click)="redirectLeaderboard()">Leaderboard</button>
       <button class="shop" type="button" (click)="redirectShop()">Shop</button>
     </div>
   </div>
 </div>
-
+<app-chat></app-chat>
 <app-footer></app-footer>
