--- a/src/app/game-board/pre-game/pre-game.component.html
+++ b/src/app/game-board/pre-game/pre-game.component.html
@@ -1,5 +1,8 @@
 <div class="pre-game">
   <div class="container">
+    <h2>Countdown</h2>
+    <p>game begins in: </p>
+
     <video src="../../../assets/Countdown1.mp4" autoplay></video>
   </div>
 </div>
